--- a/src/Investigation/MTExample/MT.Common/MT.Common.csproj
+++ b/src/Investigation/MTExample/MT.Common/MT.Common.csproj
@@ -1,8 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
+	<ImplicitUsings>disable</ImplicitUsings>
+    <Nullable>enable</Nullable>
     <ApplicationIcon />
     <StartupObject />
   </PropertyGroup>
