--- a/src/Investigation/MTExample/MT.Subscriber/MT.Subscriber.csproj
+++ b/src/Investigation/MTExample/MT.Subscriber/MT.Subscriber.csproj
@@ -1,13 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+	<OutputType>Exe</OutputType>
+	<TargetFramework>net6.0</TargetFramework>
+	<ImplicitUsings>disable</ImplicitUsings>
+	<Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MassTransit.Quartz" Version="6.1.0" />
-    <PackageReference Include="MassTransit.RabbitMq" Version="6.1.0" />
+    <PackageReference Include="MassTransit.Quartz" Version="8.0.0" />
+    <PackageReference Include="MassTransit.RabbitMq" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
